data/derived/sp14/progs/unify/prog0364.ml.out
Characters 4-6:
  tan 10;;
      ^^
Error: This expression has type int but an expression was expected of type
         float
